# MSc-UQ-Deep-Ensembles-ACCRUE

./: .gitignore  README.md  pyproject.toml
configs/: paper_reproduction.yaml
docs/: deep_ensemble_figure1_workflow.md  neural_accrue_workflow.md  repository_guide.md  research_protocol.md  step_by_step_workflow.md
results/paper_reproductions/accrue_neural_5d/: per_run_metrics.csv  sigma_pairs_sample.csv  summary.json
results/paper_reproductions/accrue_neural_g/: per_run_metrics.csv  sigma_curve.csv  summary.json
results/paper_reproductions/accrue_neural_w/: per_run_metrics.csv  sigma_curve.csv  summary.json
results/paper_reproductions/accrue_neural_y/: per_run_metrics.csv  sigma_curve.csv  summary.json
results/paper_reproductions/accrue_polynomial_g/: per_run_metrics.csv  summary.json
results/paper_reproductions/accrue_polynomial_w/: per_run_metrics.csv  summary.json
results/paper_reproductions/accrue_polynomial_y/: per_run_metrics.csv  summary.json
src/uqcomparison/: __init__.py
src/uqcomparison/data/: __init__.py  synthetic.py
src/uqcomparison/experiments/: refresh_neural_results.py  reproduce_accrue_neural.py  reproduce_accrue_toys.py  reproduce_deep_ensemble_figure1.py  reproduce_toys.py  validate_deep_ensemble.py  validate_results.py
src/uqcomparison/metrics/: __init__.py  accrue.py  probabilistic.py
tests/: test_accrue.py  test_accrue_neural.py  test_deep_ensemble_figure1.py  test_deep_ensemble_model.py  test_metrics.py  test_neural_runner.py  test_refresh_neural_results.py  test_result_validation.py  test_synthetic.py
(+4 files in other folders)
