[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uqcomparison"
version = "0.1.0"
description = "Reproduction and comparison of Deep Ensembles and ACCRUE for regression uncertainty quantification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
uq-reproduce-toys = "uqcomparison.experiments.reproduce_toys:main"
uq-reproduce-accrue = "uqcomparison.experiments.reproduce_accrue_toys:main"
uq-reproduce-accrue-neural = "uqcomparison.experiments.reproduce_accrue_neural:main"
uq-refresh-neural-results = "uqcomparison.experiments.refresh_neural_results:main"
uq-reproduce-deep-ensemble-figure1 = "uqcomparison.experiments.reproduce_deep_ensemble_figure1:main"
uq-validate-deep-ensemble = "uqcomparison.experiments.validate_deep_ensemble:main"
uq-validate-results = "uqcomparison.experiments.validate_results:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
